[gd_scene load_steps=8 format=3 uid="uid://p6dqvyjb6uwn"]

[ext_resource type="Script" uid="uid://di306m116qo6n" path="res://scripts/test_scene.gd" id="1_g7g4h"]
[ext_resource type="Script" uid="uid://blaikrh7uc4v7" path="res://scripts/ui/grid_visualizer_2d.gd" id="2_j8ivh"]
[ext_resource type="PackedScene" uid="uid://4cgr3spy7low" path="res://scenes/ui/location_ui.tscn" id="3_7ddre"]
[ext_resource type="Script" uid="uid://bv1nkaq1edt41" path="res://scripts/ui/info_panel.gd" id="3_nd71p"]
[ext_resource type="Script" uid="uid://v2g31xlcgn5o" path="res://scripts/print_nodes.gd" id="5_qjeyg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ddre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nd71p"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_g7g4h")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GridVisualizer2D" type="Node2D" parent="."]
script = ExtResource("2_j8ivh")

[node name="UI" type="CanvasLayer" parent="GridVisualizer2D"]

[node name="LocationUI" parent="GridVisualizer2D/UI" instance=ExtResource("3_7ddre")]

[node name="Panel" type="Panel" parent="GridVisualizer2D/UI"]
custom_minimum_size = Vector2(350, 500)
offset_left = 50.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="GridVisualizer2D/UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_top = 30.0
offset_right = 119.0
offset_bottom = 410.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "Procgen 2D Prototype"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ddre")

[node name="GenerateButton" type="Button" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Generate New Map"

[node name="VSeparator2" type="VSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ddre")

[node name="StatsLabel" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "Stats go here..."

[node name="HSeparator" type="HSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ddre")

[node name="CameraControls" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "Camera Controls"

[node name="VSeparator4" type="VSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ddre")

[node name="ZoomInButton" type="Button" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Zoom In"

[node name="ZoomOutButton" type="Button" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Zoom Out"

[node name="VSeparator5" type="VSeparator" parent="GridVisualizer2D/UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ddre")

[node name="Label4" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "or use mouse wheel to zoom"

[node name="Label5" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "Right-click Drag to Pan"

[node name="Label6" type="Label" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
text = "Left-click to inspect cell"

[node name="ToggleNPCsButton" type="Button" parent="GridVisualizer2D/UI/Panel/VBox"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Show NPCs"
flat = true

[node name="InfoPanel" type="PanelContainer" parent="GridVisualizer2D/UI"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -430.0
offset_top = 50.0
offset_right = -30.0
offset_bottom = 850.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("3_nd71p")

[node name="MarginContainer" type="MarginContainer" parent="GridVisualizer2D/UI/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cell Info"

[node name="PinButton" type="Button" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "üìç"

[node name="CloseButton" type="Button" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "‚úï"

[node name="VSeparator" type="VSeparator" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_nd71p")

[node name="ContentLabel" type="RichTextLabel" parent="GridVisualizer2D/UI/InfoPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 500)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true

[node name="PrintNodes" type="Node" parent="."]
script = ExtResource("5_qjeyg")
